HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuIntrinsicOutside/Expected.uv
//! Expected diagnostic metadata for the GpuIntrinsicOutside rejected-source specimen.

expectedDiagnostic("E-CON-0154", "rule.20.GpuIntrinsic-Outside-Err")
